--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<span>Kakak mau ga jadi pacar aku? 👉👈</span>
 </b></p>
 
-<!-- Tombol Akhir --><p><b><img id="akir" src="akir.gif" onClick="akhiran();"/><br>
+<!-- Tombol Akhir --><p><b><img id="Akir" src="Akir.gif" onClick="akhiran();"/><br>
 	<span>Pencet gambarnya kak</span>
 </b></p>
 
