--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
        async function pertama(){
        	 wallpaper.src = "wp.jpg";
             fotonimasi.src = "cute.gif";
-       	 audio = new Audio("Musik.mp3");
+       	 audio = new Audio('Musik.mp3');
        
             akhirkata = "Maap aku ga goodlooking 😞      ";
             akhirkata2 = "dan banyak kekurangan";
