--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             akhirkata = "Maap aku ga goodlooking 😞      ";
             akhirkata2 = "dan banyak kekurangan";
            
-            palingakhir.innerHTML = "Intinya aku suka kamu❤";
+            palingakhir.innerHTML = "Intinya aku suka kamu..❤";
             
             lanjut();
         }
